# streamlit-kickoff-cli

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
source/: main.py
st_kickoff.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
streamlit_kickoff_cli/: context_helpers.py  custom_logging.py  entrypoint.py  main.py
streamlit_kickoff_cli/app/: .gitignore  README.md  streamlit_app.py
streamlit_kickoff_cli/app/pages/: 01_😎_Page_1.py  02_🚀_Page_2.py
streamlit_kickoff_cli/dev/: command.py
streamlit_kickoff_cli/kick/: command.py
streamlit_kickoff_cli/kill/: command.py
streamlit_kickoff_cli/list/: command.py
streamlit_kickoff_cli/new/: command.py
streamlit_kickoff_cli/tests/: test_parser.py
